# colang2

./: .gitignore  .ocamlformat  Makefile  README.md  colang.opam  conf  dune  dune-project  makefile
_build/: .db  .digest-db  log
_build/default/: colang.dune-package  colang.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/expr/: expr.cma  expr.cmxa  expr.cmxs  expr.ml  mem.cma  mem.cmxa  mem.cmxs
_build/default/lib/expr/.merlin-conf/: lib-expr  lib-mem
_build/default/test/: oUnit-test suite for mem.ml.cache
_build/default/test/.exprT.eobjs/byte/: dune__exe__ExprT.cmi  dune__exe__ExprT.cmti
_build/default/test/.merlin-conf/: exe-exprT  exe-memT
_build/install/default/lib/colang/: META  (+2 more)
lib/expr/: dune  expr.ml  mem.ml
lib/lang/: dune  typ.ml  typ.mli  typ_intf.ml  value.ml  value.mli  value_intf.ml
lib/lex/: dune  lex.ml  lexer.ml  token.ml  token.mli  token_intf.ml
lib/std/: dune  misc.ml  std.ml
lib/util/: dune  utf8.ml  util.ml
src/: dune  main.ml
src/colib/: dune  idGiver.ml  idGiver.mli  myprint.ml  sMap.mli
src/expr/: dune  expr.ml  l1lang.ml
src/fe/: dune  lexer.ml  parser.messages  parser.mly  parsing.ml  run.ml  run2.ml  run2.mli  uni.py
src/lang/: dune  expr.ml  l1lang.ml  l1type.ml  mem.ml
src/misc/: dune  sMap.ml
test/: dune  exprT.ml  feT.ml  l1langT.ml  memT.ml  total.ml
test/mte/: basic.mte
test/testSuite/: dune  int.ml  int.mte  int_ops.ml  int_ops.mte  int_test.ml  int_test.mte  let.ml  let.mte  tuple_let.ml  tuple_let.mte  type.ml  type.mte  uni.py  wrongSyntax.ml  wrongSyntax.mte
(+12 files in other folders)
