(library
 (name fe)
 (preprocess (pps sedlex.ppx ppx_deriving.std))
 (libraries sedlex menhirLib ppxlib ppx_deriving lang))
 
(menhir
 (flags --dump --table)
 (modules parser))
 
(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))